Fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ nav{
     html, body {
         position: relative;
         overflow-x: hidden;
+        height: 100%;
     }
 
     .nav-links{
